syntax = "proto3";
import public "pb_64_bag.proto";
package push;

option go_package = "apsara/protofile/autogen/client/push";


message InventoryChange {
  repeated bag.itemInfo info = 1;    // 变更信息
  bag.ChangeReason reason = 2;                // 变更原由
}

enum InfoType {
  TEMPLATE = 0;   // 配置表
  EVENT = 1;      // 活动
  MAIL = 2;      // 邮件
  VIP = 3;       //vip
}

message InfoChange {
  InfoType infoType = 1;  // 信息类型
  bytes data = 2;        // 附加信息
  int32 opCode = 3;  // 推送消息码
}

message PushStatus{
  bool status = 1;  //状态
}

message PushData {
  int64 toUid = 1;  // 推送给某用户 0为广播
  PushZone zone = 2;  // 推送范围
  int64 opCode = 3;  // 推送消息码
  bytes protoData = 4;    // protobuf数据
}

enum PushZone {
    PERSON = 0;   // 个人
    ROOM = 1;      // 房间
    HALL = 2;     //大厅
    MTT = 3;     //比赛
}

message MoneyChange {
  int64 toUid = 1;  // 推送给某用户
}

service PushInfo {
  rpc Push(PushData) returns (PushStatus) {}
  rpc PushInventoryChange(InventoryChange) returns (PushStatus) {}
  rpc PushInfoChange(InfoChange) returns (PushStatus) {}
  rpc PushMoneyChange(MoneyChange) returns (PushStatus) {}
}



enum PushCode {
  UNSPECIFIED = 0;
  /*
   * 物品变化
   * s >> c: InventoryChange
   */
  INVENTORY_CHANGE = 14000;
  /*
   * 信息变化
   * s >> c: InfoChange
   */
  INFO_CHANGE = 14001;
}
